# Lumina

./: .gitignore  CMakeLists.txt  README.md
include/imgui/backends/: imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_win32.cpp  imgui_impl_win32.h
src/: CMakeLists.txt  main.cpp
src/Shader/: GBufferPass.hlsl  LightPass.hlsl
src/private/Engine/: Core.cpp  Input.cpp  ResourceManager.cpp  ScreenQuad.cpp  Time.cpp
src/private/Engine/Camera/: Camera.cpp  EditorCamera.cpp
src/private/Engine/Editor/: Editor.cpp
src/private/Engine/GameObject/: GameObject.cpp
src/private/Engine/GameObject/Component/: Component.cpp  Light.cpp  Mesh.cpp
src/private/Engine/Scene/: Scene.cpp  SceneManager.cpp
src/private/Engine/Shader/: Shader.cpp
src/private/Math/: Transform.cpp  Vector3.cpp
src/public/: DirectXIncludes.h
src/public/Engine/: ConstantBuffers.h  Core.h  Input.h  ResourceManager.h  ScreenQuad.h  Time.h  Util.h  Vertex.h
src/public/Engine/Camera/: Camera.h  EditorCamera.h
src/public/Engine/Editor/: Editor.h
src/public/Engine/GameObject/: GameObject.h
src/public/Engine/GameObject/Component/: Component.h  Light.h  Mesh.h
src/public/Engine/Scene/: Scene.h  SceneManager.h
src/public/Engine/Shader/: Shader.h
src/public/Math/: Transform.h  Vector3.h
